# chartgrabber

./: app.py  pyproject.toml
static/: UlineStyles.min.css  subgroupproduct.css
static/fonts/: ._ITCAvantGardeGothicW05-Medium.eot  ITCAvantGardeGothicW05-Medium.eot
templates/: home.html  output.html
