[tool.poetry]
name = "chartgrabber"
version = "0.1.0"
description = ""
authors = ["digrimes <dillon.grimes@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
Flask = "^2.2.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
